# PyWinKeyerSerial

./: .gitignore  README.md  main.ui  publish.sh  pyproject.toml  rebuild.sh  winkeyerserial.py  winkeyerserial.spec
install_icon/: install.sh  uninstall.sh
winkeyerserial/: __main__.py  k6gte-winkeyerserial.desktop  main.ui  settings.py  settings.ui
